# hololive-bot

./: .dockerignore  .env.example  .env.seoul.example  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  README.md  build-all.sh  docker-compose.holo-rs.yml  docker-compose.live-compat.yml  docker-compose.main-ap.live-compat.yml  docker-compose.main-ap.yml  docker-compose.osaka.yml  docker-compose.prod.yml  docker-compose.remote-cache.yml  docker-compose.seoul.yml  entrypoint_contract_test.go  go.mod  go.work  go.work.sum  hololive_20260411T171100_diff_level_review_and_fix_guide.md  hololive_20260412T085007_diff_level_review_and_fix_guide.md  hololive_20260412T104914_diff_level_review_and_fix_guide.md  hololive_20260412T162736_diff_level_review_and_fix_guide.md  hololive_20260414_ai_smell_docs_cleanup_complete.patch  hololive_20260414_ai_smell_docs_cleanup_report.md  hololive_20260414_issue_register_from_canonical_sources.md  hololive_20260414_p0_alarm_fix.patch  hololive_20260414_remaining_followups.md  hololive_20260414_repo_wide_review_master.md  hololive_20260414_static_review_and_refactor_plan.md  hololive_bot_static_rereview_20260415.md  hololive_bot_static_review_20260415.md  hololive_execution_audit_and_reimprovement_plan_20260416.md  hololive_final_codelevel_fix_plan.md  hololive_improved_version_review.md  hololive_repo_critical_review_20260415.md  hololive_review_followup.patch  hololive_runtime_split_master_plan_20260415.md  (+10 more)
admin-dashboard/backend/: .golangci.yml  Cargo.toml  Makefile  clippy.toml  deny.toml  go.mod  go.sum
admin-dashboard/backend-rs/: Cargo.toml
admin-dashboard/backend-rs/src/: config.rs  error.rs  main.rs  openapi.rs  routes.rs  state.rs  static_files.rs  stream_limiter.rs
admin-dashboard/backend-rs/src/auth/: hmac.rs  middleware.rs  mod.rs  rate_limiter.rs  session.rs
admin-dashboard/backend-rs/src/docker/: mod.rs  service.rs
admin-dashboard/backend-rs/src/handlers/: auth.rs  docker.rs  mod.rs  status.rs
admin-dashboard/backend-rs/src/middleware/: csrf.rs  etag.rs
admin-dashboard/backend-rs/src/proxy/: bot_proxy.rs
admin-dashboard/backend-rs/src/ssr/: injector.rs  mod.rs
admin-dashboard/backend-rs/src/status/: collector.rs  mod.rs  system_stats.rs
admin-dashboard/backend-rs/tests/: integration_test.rs
admin-dashboard/backend/cmd/admin/: main.go
admin-dashboard/backend/cmd/admin-dashboard/: main.go
admin-dashboard/backend/cmd/export-openapi/: main.go
admin-dashboard/backend/cmd/healthcheck/: main.go
admin-dashboard/backend/docs/: docs.go  swagger.json  swagger.yaml
admin-dashboard/backend/internal/app/: app.go  app_test.go  handlers.go  middleware.go  middleware_client_ip_test.go  responses.go  routes.go  session_handlers.go  session_handlers_test.go  session_store_cleanup.go  session_store_cleanup_test.go
admin-dashboard/backend/internal/auth/: auth.go  cookies.go  cookies_test.go  crypto.go  crypto_test.go  rate_limiter.go  rate_limiter_test.go
admin-dashboard/backend/internal/bootstrap/: logger.go
admin-dashboard/backend/internal/config/: config.go  config_more_test.go  config_test.go  origins_test.go  security.go  security_test.go
admin-dashboard/backend/internal/docker/: client.go  client_cache.go  client_cache_test.go  client_followup_test.go  client_http_test.go  client_test.go  client_transport_test.go  docker.go  interface.go
admin-dashboard/backend/internal/holo/: client.go  client_io_test.go  client_roundtrip_test.go  client_test.go  client_validation_test.go  handlers.go  handlers_test.go
admin-dashboard/backend/internal/httpx/: httpx.go  httpx_decode_test.go  httpx_test.go
admin-dashboard/backend/internal/logs/: logs.go
admin-dashboard/backend/internal/middleware/: csrf.go  csrf_test.go
admin-dashboard/backend/internal/openapi/: spec.go  spec.json  spec_test.go
admin-dashboard/backend/internal/proxy/: proxy.go  proxy_test.go
admin-dashboard/backend/internal/server/: handlers_auth.go  handlers_docker.go  handlers_logs.go  handlers_status.go  middleware.go  routes.go  server.go  stream_limiter.go  stream_limiter_test.go  types.go
admin-dashboard/backend/internal/session/: lifecycle.go  session.go  session_test.go  store_integration_test.go
admin-dashboard/backend/internal/ssr/: ssr.go
admin-dashboard/backend/internal/static/: static.go  static_test.go
admin-dashboard/backend/internal/status/: health.go  health_test.go  hub.go  hub_snapshot_test.go  hub_test.go  os.go  proc_test.go  snapshot.go  status.go  status_order_test.go  status_test.go  system_stats.go
admin-dashboard/backend/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  routes.rs  state.rs  static_files.rs  stream_limiter.rs
admin-dashboard/backend/src/auth/: hmac.rs  middleware.rs  mod.rs  rate_limiter.rs  rotate_session.lua  session.rs  session_store.rs
admin-dashboard/backend/src/config/: env.rs  security.rs  session.rs
admin-dashboard/backend/tests/: export_openapi_smoke.rs  integration_test.rs
hololive/hololive-rs/: .dockerignore  CONVENTIONS.md  Cargo.toml  Dockerfile  Dockerfile.alarm  Dockerfile.dispatcher  MEMORY.md  Makefile  alarm-config.toml  clippy.toml  config.toml  deny.toml  dispatcher-config.toml  rust-toolchain.toml  rustfmt.toml
hololive/hololive-rs/.cargo/: audit.toml
hololive/hololive-rs/.githooks/: pre-commit
hololive/hololive-rs/docs/: ALARM_RUST_CUTOVER.md  LOGGING_POLICY.md  README.md
hololive/hololive-rs/scripts/: check-dep-rules.sh  cross_validate_live_100.sh  dual_run_diff_summary.sh
hololive/hololive-rs/testdata/: api_contracts.json
hololive/hololive-scraper-rs/: CONVENTIONS.md  Cargo.toml  Dockerfile  Dockerfile.alarm  clippy.toml  config.toml
hololive/hololive-scraper-rs/docs/: BACKEND_GUIDE_REVIEW_20260223.md  FEED_SCHEDULER_SEPARATION.md  IMPLEMENTATION_PLAN.md  LIBRARY_ADOPTION_PLAN_20260223.md  LOGGING_POLICY.md  PHASE_0_INFRASTRUCTURE.md  PHASE_1_MAJOREVENT_SCRAPER.md  PHASE_2_LINKCHECKER.md
hololive/hololive-scraper-rs/scripts/: cross_validate.sh  major_events_snapshot.sh  major_events_snapshot_diff.sh
(+6446 files in other folders)
