[package]
name = "admin-dashboard"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "set-header", "trace"] }

# Session store
deadpool-redis = "0.23"
redis = { version = "1.2", features = ["tokio-comp"] }

# Docker
bollard = "0.20"

# Proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"

# Auth
hmac = "0.12"
sha2 = "0.10"
bcrypt = "0.19"
getrandom = "0.4"
hex = "0.4"
base64 = "0.22"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Static files
rust-embed = "8"

# System stats
sysinfo = "0.38"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (status collector, SSR)
reqwest = { version = "0.13", features = ["json"] }

# Async trait
async-trait = "0.1"

# Stream utilities
bytes = "1"
futures = "0.3"
futures-util = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
mime_guess = "2"
pin-project-lite = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockall = "0.14"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
# 정확성
correctness = { level = "deny", priority = -1 }
# 의심스러운 코드
suspicious = { level = "deny", priority = -1 }
# 복잡도
complexity = { level = "warn", priority = -1 }
# 성능
perf = { level = "warn", priority = -1 }
# 스타일
style = { level = "warn", priority = -1 }
# pedantic (엄격)
pedantic = { level = "warn", priority = -1 }
# pedantic 중 프로젝트에 맞지 않는 규칙은 허용
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
# nursery (실험적이지만 유용한 규칙)
nursery = { level = "warn", priority = -1 }
# nursery 중 false positive 많은 것은 허용
future_not_send = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
# 추가 deny 규칙
# Mutex::lock, HMAC::new_from_slice, 서버 초기화 등 정당한 사용이 다수
# 개별 코드에서 부당한 사용은 코드 리뷰에서 차단
unwrap_used = "allow"
expect_used = "allow"
# 필수 env 누락, Mutex poison 등 복구 불가 상황에서의 panic은 정당
panic = "allow"
# Result 반환 함수 내에서의 unwrap은 경고 (실제 에러 전파 누락 감지)
unwrap_in_result = "warn"
todo = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
