[workspace]
resolver = "3"
members = [
    "crates/scraper/core",
    "crates/scraper/service",
    "crates/scraper/infra",
    "crates/scraper/app",
    "crates/alarm/core",
    "crates/alarm/service",
    "crates/alarm/infra",
    "crates/alarm/app",
    "crates/dispatcher/app",
    "crates/shared/core",
    "crates/shared/infra",
    "crates/shared/services/formatter",
    "crates/shared/services/parser",
    "crates/shared/services/cache",
    "crates/shared/services/configsub",
    "crates/shared/services/member",
    "crates/shared/services/notification",
    "crates/shared/services/ratelimit",
    "crates/shared/services/template",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
elided_lifetimes_in_paths = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
# --- deny: 운영 코드 품질 게이트 ---
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# 테스트 코드에서는 각 모듈에 #[allow] 지정
# wildcard_enum_match_arm: 점진적 적용 (기존 코드 일부 해당)
wildcard_enum_match_arm = "allow"
# str_to_string: 신규 코드에서 to_owned() 권장 (기존 107건 잔존)
str_to_string = "allow"
rc_buffer = "deny"
rest_pat_in_fully_bound_structs = "deny"
verbose_file_reads = "deny"
redundant_closure_for_method_calls = "deny"

# --- pedantic 그룹 (deny 승격) ---
pedantic = { level = "deny", priority = -1 }

# pedantic 중 과도한 항목 허용
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# cast_possible_truncation: 명시적 변환은 의도적
cast_possible_truncation = "allow"
# cast_sign_loss: usize ↔ i64 변환 빈발
cast_sign_loss = "allow"
# cast_precision_loss: f64 ↔ i64 변환 허용
cast_precision_loss = "allow"
# struct_excessive_bools: config 구조체에 다수 bool 필드
struct_excessive_bools = "allow"

# --- nursery 유용 항목 (deny) ---
collection_is_never_read = "deny"
redundant_clone = "deny"
unused_peekable = "deny"
empty_line_after_doc_comments = "deny"
useless_let_if_seq = "deny"

[workspace.dependencies]
# async runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# http
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls", "gzip", "brotli", "socks", "http2"
] }
reqwest-middleware = { version = "0.5.1", default-features = false, features = [
    "json", "form", "query"
] }
reqwest-retry = "0.9.1"
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros", "sqlx-postgres", "runtime-tokio-rustls", "with-chrono"
] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rss = "2.0.12"

# parsing
regex = "1.12.3"
unicode-normalization = "0.1.25"
aho-corasick = "1.1.4"
scraper = "0.25.0"

# time
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
cron = "0.15.0"

# config
config = "0.15.19"
clap = { version = "4.5.60", features = ["derive", "env"] }

# observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.3"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32.0"
time = { version = "0.3.47", features = ["formatting", "macros"] }

# error handling
thiserror = "2.0.18"
anyhow = "1.0.102"
secrecy = "0.10.3"
validator = { version = "0.20.0", features = ["derive"] }

# utils
url = "2.5.8"
backon = "1"
futures = "0.3.31"
ipnet = "2.11.0"
parking_lot = "0.12"
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio"] }

# alarm dependencies
fred = { version = "10", features = ["i-all", "unix-sockets"] }
dashmap = "6"
moka = { version = "0.12.11", features = ["sync"] }
governor = "0.10"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
tera = "1"
gtmpl-ng = "0.7.5"

# workspace internal
scraper-core = { path = "crates/scraper/core" }
scraper-service = { path = "crates/scraper/service" }
scraper-infra = { path = "crates/scraper/infra" }
alarm-core = { path = "crates/alarm/core" }
alarm-service = { path = "crates/alarm/service" }
alarm-infra = { path = "crates/alarm/infra" }
shared-core = { path = "crates/shared/core" }
shared-infra = { path = "crates/shared/infra" }
shared-formatter = { path = "crates/shared/services/formatter" }
shared-parser = { path = "crates/shared/services/parser" }
shared-cache = { path = "crates/shared/services/cache" }
shared-configsub = { path = "crates/shared/services/configsub" }
shared-member = { path = "crates/shared/services/member" }
shared-notification = { path = "crates/shared/services/notification" }
shared-ratelimit = { path = "crates/shared/services/ratelimit" }
shared-template = { path = "crates/shared/services/template" }
