[workspace]
resolver = "3"
members = [
    "crates/scraper/core",
    "crates/scraper/service",
    "crates/scraper/infra",
    "crates/scraper/app",
    "crates/alarm/core",
    "crates/alarm/service",
    "crates/alarm/infra",
    "crates/alarm/app",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# 기존 deny
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# pedantic 그룹 (warn, 점진적 적용)
pedantic = { level = "warn", priority = -1 }

# pedantic 중 과도한 항목 허용
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# 성능/품질 warn
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
manual_string_new = "warn"
implicit_clone = "warn"

[workspace.dependencies]
# async runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# http
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls", "gzip", "brotli", "socks", "http2"
] }
reqwest-middleware = { version = "0.5.1", default-features = false, features = [
    "json", "form", "query"
] }
reqwest-retry = "0.9.1"
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros", "sqlx-postgres", "runtime-tokio-rustls", "with-chrono"
] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rss = "2.0.12"

# parsing
regex = "1.12.3"
unicode-normalization = "0.1.25"
aho-corasick = "1.1.4"
scraper = "0.25.0"

# time
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
cron = "0.15.0"

# config
config = "0.15.19"
clap = { version = "4.5.60", features = ["derive", "env"] }

# observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.3"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32.0"
time = { version = "0.3.47", features = ["formatting", "macros"] }

# error handling
thiserror = "2.0.18"
anyhow = "1.0.102"
secrecy = "0.10.3"
validator = { version = "0.20.0", features = ["derive"] }

# utils
url = "2.5.8"
backon = "1"
futures = "0.3.31"
ipnet = "2.11.0"
parking_lot = "0.12"
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio"] }

# alarm dependencies
fred = { version = "10", features = ["i-all", "unix-sockets"] }
dashmap = "6"
moka = { version = "0.12.11", features = ["sync"] }
governor = "0.10"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

# workspace internal
scraper-core = { path = "crates/scraper/core" }
scraper-service = { path = "crates/scraper/service" }
scraper-infra = { path = "crates/scraper/infra" }
alarm-core = { path = "crates/alarm/core" }
alarm-service = { path = "crates/alarm/service" }
alarm-infra = { path = "crates/alarm/infra" }
