[package]
name = "alarm-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alarm-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true }
fred = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true, features = ["json", "form", "query"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
shared-infra = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[features]
test-support = ["shared-infra/test-support"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
