[package]
name = "shared-notification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-core = { workspace = true }
shared-infra = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
