[package]
name = "shared-template"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-core = { workspace = true }
shared-infra = { workspace = true }
async-trait.workspace = true
gtmpl-ng.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
tracing.workspace = true

[lints]
workspace = true
