[package]
name = "shared-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = []

[dependencies]
shared-core = { path = "../core" }
sea-orm = { workspace = true }
fred = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
