[package]
name = "scraper-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
aho-corasick = { workspace = true }
backon = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ipnet = { workspace = true }
hickory-resolver = { workspace = true }
parking_lot = { workspace = true }
rss = { workspace = true }
scraper = { workspace = true }
scraper-core = { workspace = true }
scraper-infra = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
