[package]
name = "shared-configsub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-core = { path = "../../core" }
shared-infra = { path = "../../infra" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
