[package]
name = "shared-template"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-core = { path = "../../core" }
shared-infra = { path = "../../infra" }
async-trait.workspace = true
gtmpl-ng.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
tracing.workspace = true

[lints]
workspace = true
